--- a/style.css
+++ b/style.css
@@ -6,10 +6,18 @@
 
 body{
     background-color: #FFEDD5;
+    font-family: 'Roboto', sans-serif;
 }
 
 ul{
     list-style: none;
+}
+
+/* Fontes */
+h1, h2, h3, .price{
+    font-family: 'Roboto Serif', serif;
+    text-transform: uppercase;
+    color: #2D2C2A;
 }
 
 header{
@@ -24,6 +32,14 @@ header, section{
 
 header h1{
     margin-bottom: 4px;
+    font-size: 28px;
+    line-height: 33px;
+}
+
+header p{
+    font-size: 14px;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 header h1 span{
@@ -39,10 +55,12 @@ section h2{
     padding: 8px 16px;
     text-align: center;
     margin-bottom: 24px;
+    font-size: 18px;
 }
 
 ul li{
     margin-bottom: 16px;
+    display: flex;
 }
 
 li .details{
@@ -51,4 +69,12 @@ li .details{
 
 .details h3{
     margin-bottom: 8px;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.details p{
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
+    line-height: 21px;
 }
